force-app/main/default/objects/Content_File_Upload__mdt/Content_File_Upload__mdt.object-meta.xml
<CustomObject>
    <label>Content File Upload</label>
    <pluralLabel>Content File Uploads</pluralLabel>
</CustomObject>