force-app/main/default/objects/Content_File_Upload__mdt/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <referenceTo>Application__mdt</referenceTo>
    <relationshipLabel>Content File Uploads</relationshipLabel>
    <relationshipName>Content_File_Uploads</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>