force-app/main/default/objects/Content_File_Upload__mdt/fields/Content_URL_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Content_URL_Field_API_Name__c</fullName>
    <label>Content URL Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>