force-app/main/default/objects/Content_File_Upload__mdt/fields/Document_Description__c.field-meta.xml
<CustomField>
    <fullName>Document_Description__c</fullName>
    <label>Document Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>