force-app/main/default/objects/Content_File_Upload__mdt/fields/Document_Status_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Document_Status_Field_API_Name__c</fullName>
    <label>Document Status Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>